inital commit, gitignore, dev env configs

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,39 @@ export_credentials.cfg
 .mono/
 data_*/
 mono_crash.*.json
+
+*.exe
+*.dll
+*.zip
+*.pck
+*.log
+*.png
+*.import
+.*
+
+*.icns
+*.ico
+
+
+addons/
+backup/
+challenges/
+effects/
+behaviors/
+effect_behaviors/
+entities/
+global/
+items/
+mods/*.zip
+mods/*.pck
+MODS_WIP/
+overlap/
+particles/
+projectiles/
+resources/
+singletons/
+tools/
+ui/
+visual_effects/
+weapons/
+zones/
