structuring and correcting gitignore and exports workflow

--- a/.gitignore
+++ b/.gitignore
@@ -28,25 +28,26 @@ mono_crash.*.json
 *.ico
 
 
-addons/
-backup/
-challenges/
-effects/
-behaviors/
-effect_behaviors/
-entities/
-global/
-items/
-mods/*.zip
-mods/*.pck
-MODS_WIP/
-overlap/
-particles/
-projectiles/
-resources/
-singletons/
-tools/
-ui/
-visual_effects/
-weapons/
-zones/
+/addons
+/backup
+/challenges
+/effects
+/behaviors
+/effect_behaviors
+/entities
+/global
+/items
+/mods/*.zip
+/mods/*.pck
+/MODS_WIP/
+/overlap
+/particles
+/projectiles
+/resources
+/singletons
+/tools
+/visual_effects
+/weapons
+/zones
+/_EXPORT
+/ui
