--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,7 +8,7 @@ export_filter="resources"
 export_files=PoolStringArray(  )
 include_filter="*.gd, *.json, *.txt, *.cfg, *.tscn, *.png, *.ogg, ui/*"
 exclude_filter="*.import, *.tmp"
-export_path=""
+export_path="./_EXPORT"
 script_export_mode=1
 script_encryption_key=""
 
