--- a/mods-unpacked/Calico-ReloadUI/manifest.json
+++ b/mods-unpacked/Calico-ReloadUI/manifest.json
@@ -1,9 +1,9 @@
 {
   "name": "ReloadUI",
   "namespace": "Calico",
-  "version_number": "1.0.3",
+  "version_number": "1.0.4",
   "website_url": "",
-  "description": "Weapon icons with cooldown overlay near life/material UI.",
+  "description": "Weapon icons with cooldown overlay near life/material UI. Includes bugfix for editor mode crashes.",
   "dependencies": [],
   "extra": {
     "godot": {
@@ -13,7 +13,7 @@
       "compatible_mod_loader_version": ["6.0.0"],
       "incompatibilities": [],
       "load_before": [],
-      "tags": ["ui", "overlay", "weapons"],
+      "tags": ["ui", "overlay", "weapons", "bugfix"],
       "config_schema": {},
       "description_rich": "",
       "image": ""
