access images for weapons in UI, removed damagemeter dep, add AI/Dev friendly technical documentation

--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,9 @@ mono_crash.*.json
 *.tscn
 .*
 
-
+/temp_backup
+/export_backups
+/mods-unpacked/Calico-ReloadUI/backup
 /backup
 /challenges
 /effects
